# hse_project

./: .gitignore  CMakeLists.txt  README.md  custom_long.cpp  custom_long.h  main.cpp
custom_long_lib/: CMakeLists.txt  custom_long.cpp  custom_long.h
tests/: CMakeLists.txt  my_tests.cpp
